Sketch out support for filters
Applied as where clauses when generating sql,, as function call when
aggregating in-memory.

--- a/src/PivotSharp/PivotSharp.csproj
+++ b/src/PivotSharp/PivotSharp.csproj
@@ -53,14 +53,18 @@
     <Compile Include="DataReader\DynamicProperties.cs" />
     <Compile Include="DataReader\EnumerableDataReader.cs" />
     <Compile Include="DataReader\ObjectDataReader.cs" />
+    <Compile Include="DbTypeMap.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\IDataReaderExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Filters\Equals.cs" />
+    <Compile Include="Filters\Filter.cs" />
+    <Compile Include="Filters\GreaterThan.cs" />
     <Compile Include="Header.cs" />
     <Compile Include="IAggregator.cs" />
     <Compile Include="IFilter.cs" />
     <Compile Include="PivotConfig.cs" />
+    <Compile Include="PivotSqlString.cs" />
     <Compile Include="PivotTable.cs" />
     <Compile Include="PivotDbConnector.cs" />
     <Compile Include="PivotKey.cs" />
