--- a/tests/PivotSharp.Tests/PivotSharp.Tests.csproj
+++ b/tests/PivotSharp.Tests/PivotSharp.Tests.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
@@ -49,6 +53,7 @@
     <Compile Include="01-Simple_Count_Test.cs" />
     <Compile Include="05-Date_Filter_Tests.cs" />
     <Compile Include="04-String_Filter_Tests.cs" />
+    <Compile Include="ConfigSerializationTests.cs" />
     <Compile Include="PivotKeyTests.cs" />
     <Compile Include="PivotSqlStringTests.cs" />
     <Compile Include="PivotValuesTests.cs" />
