--- a/tests/PivotSharp.Tests/PivotSharp.Tests.csproj
+++ b/tests/PivotSharp.Tests/PivotSharp.Tests.csproj
@@ -51,7 +51,8 @@
     <Compile Include="03-Multi_Layer_Test.cs" />
     <Compile Include="02-Simple_Sum_Test.cs" />
     <Compile Include="01-Simple_Count_Test.cs" />
-    <Compile Include="05-Date_Filter_Tests.cs" />
+    <Compile Include="05-Date_Filter_Tests .cs" />
+    <Compile Include="AggregatorTests.cs" />
     <Compile Include="04-String_Filter_Tests.cs" />
     <Compile Include="ConfigSerializationTests.cs" />
     <Compile Include="PivotKeyTests.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="PivotValuesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ObscureShape.cs" />
+    <Compile Include="Sale.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
