--- a/src/PivotSharp/PivotSharp.csproj
+++ b/src/PivotSharp/PivotSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Aggregators\Ave.cs" />
     <Compile Include="Aggregators\SumInt.cs" />
     <Compile Include="Aggregators\Sum.cs" />
+    <Compile Include="ConfigurationErrorHandlingMode.cs" />
     <Compile Include="DataReader\DynamicProperties.cs" />
     <Compile Include="DataReader\EnumerableDataReader.cs" />
     <Compile Include="DataReader\ObjectDataReader.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Header.cs" />
     <Compile Include="IAggregator.cs" />
     <Compile Include="PivotConfig.cs" />
+    <Compile Include="PivotConfigurationException.cs" />
     <Compile Include="PivotSqlString.cs" />
     <Compile Include="PivotTable.cs" />
     <Compile Include="PivotDbConnector.cs" />
