Fix the support for Avg
To properly support Avg as an aggregation, we need to pull Counts in
from the db with the groupings, so we can re-calculate the overall (Row
Total) averages.

--- a/src/PivotSharp/PivotSharp.csproj
+++ b/src/PivotSharp/PivotSharp.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aggregators\AggregatorBase.cs" />
     <Compile Include="Aggregators\AggregatorDef.cs" />
     <Compile Include="Aggregators\Count.cs" />
     <Compile Include="Aggregators\Max.cs" />
