Add support for Count Distinct. Fix some sql bugs
Count Distinct will not aggregate entirely correctly. If the column
being counted has values against different rows/columns, there will be
double counting.

--- a/src/PivotSharp/PivotSharp.csproj
+++ b/src/PivotSharp/PivotSharp.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Aggregators\AggregatorBase.cs" />
     <Compile Include="Aggregators\AggregatorDef.cs" />
+    <Compile Include="Aggregators\CountDistinct.cs" />
     <Compile Include="Aggregators\Count.cs" />
     <Compile Include="Aggregators\Max.cs" />
     <Compile Include="Aggregators\Min.cs" />
