--- a/samples/PivotSharp.Web/PivotSharp.Web.csproj
+++ b/samples/PivotSharp.Web/PivotSharp.Web.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\IChartViewModel.cs" />
+    <Compile Include="Models\BarChartViewModel.cs" />
     <Compile Include="Models\PieChartViewModel.cs" />
     <Compile Include="Models\LineChartViewModel.cs" />
     <Compile Include="Models\PivotChartsViewModel.cs" />
@@ -171,6 +172,7 @@
     <Content Include="Views\Shared\TableSingleAggregation.cshtml" />
     <Content Include="Views\Shared\_PieChart.cshtml" />
     <Content Include="Views\Shared\_Chart.cshtml" />
+    <Content Include="Views\Shared\_BarChart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
