Present options for filter values
Using Twitter's Typeahead. This needs a bit of hacking around with css
to fit in with Bootstrap and Material Design

--- a/src/PivotSharp/PivotSharp.csproj
+++ b/src/PivotSharp/PivotSharp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Aggregators\Ave.cs" />
     <Compile Include="Aggregators\SumInt.cs" />
     <Compile Include="Aggregators\Sum.cs" />
+    <Compile Include="Column.cs" />
     <Compile Include="ConfigurationErrorHandlingMode.cs" />
     <Compile Include="DataReader\DynamicProperties.cs" />
     <Compile Include="DataReader\EnumerableDataReader.cs" />
