--- a/samples/PivotSharp.Web/PivotSharp.Web.csproj
+++ b/samples/PivotSharp.Web/PivotSharp.Web.csproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\typeahead.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
