--- a/samples/PivotSharp.WebCore/PivotSharp.WebCore.csproj
+++ b/samples/PivotSharp.WebCore/PivotSharp.WebCore.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\PivotSharp\PivotSharp.csproj" />
+    <ProjectReference Include="..\..\src\PivotSharp\PivotSharp.csproj" />
   </ItemGroup>
 
 </Project>
