Reconnect views to database

--- a/samples/PivotSharp.WebCore/appsettings.json
+++ b/samples/PivotSharp.WebCore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Initial Catalog=WorldData;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
