--- a/samples/PivotSharp.WebCore/PivotSharp.WebCore.csproj
+++ b/samples/PivotSharp.WebCore/PivotSharp.WebCore.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\PivotSharp\PivotSharp.csproj" />
   </ItemGroup>
 
