--- a/src/PivotSharp/PivotSharp.csproj
+++ b/src/PivotSharp/PivotSharp.csproj
@@ -10,6 +10,7 @@
     <Copyright>Copyright ©  2016</Copyright>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <Nullable>warnings</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Templates\Table.cshtml">
